@@ -1,5 +1,7 @@
 Changelog for mk-table-checksum and mk-checksum-filter:
 
+   * --sleep slept after the last or only chunk (issue 1256).
+
 2011-01-06: version 1.2.20
 
    * Character-based columns were not chunkable (issue 568).
